fixing issue of collapsing navbar being size of entire screen. changed height from 100vh to 100%

--- a/style/main.css
+++ b/style/main.css
@@ -399,7 +399,7 @@ footer {
     .nav div.main_list ul {
         flex-direction: column;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         right: 0;
         left: 0;
         bottom: 0;
